<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:background="@color/grey_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Activities.CourseActivity">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/c_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimary"
                android:scaleType="fitXY" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:background="@color/white"
            android:contentDescription="@string/action_sign_in"
            android:orientation="vertical">


            <TextView
                android:id="@+id/c_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:text="@string/pyhton"
                android:textColor="@color/text_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/m_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:text="@string/mentor"
                android:textColor="@color/text_light"
                android:textSize="14sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/rate_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"

            android:layout_marginBottom="2dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/rate_this_course"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/tell_others_what_you_think"
                android:textColor="@color/light"
                android:textSize="13sp" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/rating"
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="-10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="-10dp"
                android:stepSize="1.0" />

            <TextView
                android:id="@+id/write_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:padding="5dp"
                android:text="@string/write_a_review"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/your_review"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <include layout="@layout/edit_review" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/ratings_and_reviews"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/all_rating"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:gravity="center"
                    android:text="@string/_0_0"
                    android:textColor="@color/black"
                    android:textSize="40sp" />


                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/all_rating_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="-10dp"
                    android:layout_marginRight="-10dp"
                    android:isIndicator="true"
                    android:maxHeight="40dp"
                    android:rating="5.0" />
            </LinearLayout>

            <TextView
                android:id="@+id/tot_rating"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="2dp"
                android:paddingBottom="4dp"
                android:text="0 rating"
                android:textColor="@color/text_dark"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            tools:listitem="@layout/comments_layout" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
