<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:background="@drawable/round_corner"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:text="@string/discard_draft"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum=".8">

        <Button
            android:id="@+id/keep_writing"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="12dp"
            android:layout_weight=".4"
            android:background="@drawable/round_button"
            android:text="@string/keep"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/discard"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="12dp"
            android:layout_weight=".4"
            android:background="@drawable/round_button"
            android:text="@string/discard"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </LinearLayout>

</LinearLayout>
