<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_bg_light"
            android:contentDescription="@string/action_sign_in"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/course_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/grey_bg_light"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/course_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:text="@string/pyhton"
                android:textColor="@color/text_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mentor"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/mentor"
                android:textColor="@color/text_light"
                android:textSize="13sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>