<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_icon"
            android:layout_width="32dp"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/user_icon"
            android:gravity="center_vertical"
            android:text="@string/user__name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/user_rating"
            style="@style/Widget.MaterialRatingBar.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_icon"
            android:layout_marginStart="10dp"
            android:isIndicator="true"
            android:minHeight="14dp"
            android:rating="5.0" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_icon"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/user_rating"
            android:text="@string/_20_10_2019"
            android:textColor="@color/light"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/user_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_rating"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/best_app"
            android:textColor="@color/light"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_comments"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:padding="2dp"
            android:text="@string/contact_user"
            android:textColor="@color/text_dark"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/whats"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="12dp"
                android:layout_weight=".3"
                android:background="@drawable/round_button"
                android:drawableLeft="@drawable/whats"
                android:paddingStart="6dip"
                android:paddingEnd="2dip"
                android:singleLine="true"
                android:text="Whats app"
                android:textAllCaps="false"
                android:textColor="@color/text_dark"
                android:textSize="12sp" />

            <Button
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="12dp"
                android:layout_weight=".3"
                android:background="@drawable/round_button"
                android:drawableStart="@drawable/message"
                android:paddingStart="6dip"
                android:paddingEnd="2dip"
                android:text="@string/message"
                android:textAllCaps="false"
                android:textColor="@color/text_dark"
                android:textSize="12sp" />


        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>
