<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_user_icon"
        android:layout_width="32dp"
        android:layout_height="36dp"
        android:layout_margin="10dp"
        android:src="@drawable/user" />

    <TextView
        android:id="@+id/edit_user_name"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/edit_user_icon"
        android:gravity="center_vertical"
        android:text="Vedx"
        android:textColor="@color/text_dark"
        android:textSize="15sp" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/edit_user_rating"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_user_name"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/edit_user_icon"
        android:isIndicator="true"
        android:minHeight="16dp"
        android:rating="5.0" />

    <TextView
        android:id="@+id/edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_user_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/edit_user_rating"
        android:text="@string/_20_10_2019"
        android:textColor="@color/light"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/edit_user_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_user_rating"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/best_app"
        android:textColor="@color/text_light"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/edit_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_user_comment"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="6dp"
        android:padding="2dp"
        android:text="@string/edit_your_review"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />


</RelativeLayout>