<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="@drawable/round_corner"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:text="@string/send_message"
        android:textColor="@color/text_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_margin="7dp"
            android:layout_marginTop="5dp"
            android:gravity="bottom"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:hintTextAppearance="@style/HintText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/whats_message"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:gravity="top|start"
                android:hint="@string/write_message"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/whats_send"
                android:layout_width="100dp"
                android:layout_height="26dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="12dp"
                android:layout_weight=".5"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/whats_cancel"
                android:layout_width="100dp"
                android:layout_height="26dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="12dp"
                android:layout_weight=".5"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:text="CANCEL"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>
